fix(design): adjust width to prevent unwanted jumps when switching between tabs

--- a/src/components/SpotCard/spotcard.css
+++ b/src/components/SpotCard/spotcard.css
@@ -3,7 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  max-width: 20vw;
+  width: 100%; 
+  max-width: calc(25% - 1.5em);
+  flex-basis: calc(25% - 1.5em);
 }
 
 .image-container {
@@ -63,7 +65,6 @@
 .mantine-Carousel-indicator[data-active] {
   background-color: rgba(255, 255, 255, 0.8);
 }
-
 
 .carousel-image img {
   border-radius: 0;
@@ -125,9 +126,17 @@
   font-weight: 500;
 }
 
+@media (max-width: 1024px) {
+  .card {
+    max-width: calc(33.33% - 1em);
+    flex-basis: calc(33.33% - 1em);
+  }
+}
+
 @media (max-width: 767px) {
   .card {
-    max-width: 100vw;
+    max-width: 100%;
+    flex-basis: 100%;
     margin-bottom: 0em;
   }
 }
