--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
+  width: 100vw;
 }
 
 body, html {
@@ -11,8 +12,7 @@ body, html {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
   overflow-y: scroll;
 }
 
